tests/match_failure/match_failure.exp
Error -------------------------------------------------------------------------------------------- disjoint_union.js:8:7

All branches are incompatible: [incompatible-type]
 - Either object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `rectangle` [2].
 - Or object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `circle` [3].

   disjoint_union.js:8:7
   8|   if (shape.type === 'square') { // error
            ^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   disjoint_union.js:4:10
   4|   {type: 'rectangle', width: number, height: number} |
               ^^^^^^^^^^^ [2]
   disjoint_union.js:5:10
   5|   {type: 'circle', radius: number};
               ^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------- disjoint_union.js:8:22

All branches are incompatible: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [2].
 - Or string [1] is incompatible with string literal `circle` [3].

   disjoint_union.js:8:22
   8|   if (shape.type === 'square') { // error
                           ^^^^^^^^ [1]

References:
   disjoint_union.js:4:10
   4|   {type: 'rectangle', width: number, height: number} |
               ^^^^^^^^^^^ [2]
   disjoint_union.js:5:10
   5|   {type: 'circle', radius: number};
               ^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------- disjoint_union.js:21:7

All branches are incompatible: [incompatible-type]
 - Either object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `rectangle` [2].
 - Or object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `circle` [3].

   disjoint_union.js:21:7
   21|   if (shape.type === 'square') { // error
             ^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   disjoint_union.js:17:11
   17|   {|type: 'rectangle', width: number, height: number|} |
                 ^^^^^^^^^^^ [2]
   disjoint_union.js:18:11
   18|   {|type: 'circle', radius: number|};
                 ^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------ disjoint_union.js:21:22

All branches are incompatible: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [2].
 - Or string [1] is incompatible with string literal `circle` [3].

   disjoint_union.js:21:22
   21|   if (shape.type === 'square') { // error
                            ^^^^^^^^ [1]

References:
   disjoint_union.js:17:11
   17|   {|type: 'rectangle', width: number, height: number|} |
                 ^^^^^^^^^^^ [2]
   disjoint_union.js:18:11
   18|   {|type: 'circle', radius: number|};
                 ^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------- disjoint_union.js:34:7

All branches are incompatible: [incompatible-type]
 - Either object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `rectangle` [2].
 - Or object with property `type` that matches string literal `square` [1] is incompatible with string literal
   `circle` [3].

   disjoint_union.js:34:7
   34|   if (shape.type === 'square') { // error
             ^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   disjoint_union.js:30:11
   30|   {+type: 'rectangle', width: number, height: number} |
                 ^^^^^^^^^^^ [2]
   disjoint_union.js:31:11
   31|   {+type: 'circle', radius: number};
                 ^^^^^^^^ [3]


Error ------------------------------------------------------------------------------------------ disjoint_union.js:34:22

All branches are incompatible: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [2].
 - Or string [1] is incompatible with string literal `circle` [3].

   disjoint_union.js:34:22
   34|   if (shape.type === 'square') { // error
                            ^^^^^^^^ [1]

References:
   disjoint_union.js:30:11
   30|   {+type: 'rectangle', width: number, height: number} |
                 ^^^^^^^^^^^ [2]
   disjoint_union.js:31:11
   31|   {+type: 'circle', radius: number};
                 ^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- enum.js:8:25

number literal `2` [1] is incompatible with enum [2]. [incompatible-type]

   enum.js:8:25
   8|   } else if (binary === 2) { // oops
                              ^ [1]

References:
   enum.js:5:34
   5| function stringifyBinary(binary: Binary): string {
                                       ^^^^^^ [2]



Found 7 errors
